<resources>
    <string name="app_name">StableDiffuser</string>
    <string name="title_search">Art Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_art">Art</string>
    <string name="empty_title_mosaic">No image found</string>
    <string name="empty_title_favorites">Add a new favorite</string>
    <string name="retry_title">Try again</string>
    <string name="retry_later">Give your thumbs some rest! You may try again in %1$d mn</string>
    <string name="show_more">Explore this style</string>
    <string name="more_of">Style of: %s</string>
    <string name="nsfw_text">Not safe for work</string>
    <string name="search_box_hint">Describe the art you\'re looking for</string>
    <string name="search">Search</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear">clear</string>
    <string name="no_search_query">No search query</string>
    <string name="nav_drawer_lexica_title">All art comes from Lexica, the Stable Diffusion search engine:</string>
    <string name="nav_drawer_lexica_url">http://www.lexica.art</string>
    <string name="nav_drawer_title">About</string>
    <string name="nav_drawer_personal_title">Want to give feedback, suggest new features or offer a collaboration?</string>
    <string name="nav_drawer_personal_url">https://www.linkedin.com/in/benoithebrard/</string>
    <string name="nav_drawer_app_version">App version 1.3.1</string>
    <string name="nav_drawer_code_title">The app code is freely available at:</string>
    <string name="nav_drawer_code_url">https://github.com/benoithebrard/StableDiffuser</string>
</resources>