<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/drawer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autoLink="web"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/nav_drawer_title"
        android:textColor="@color/black"
        android:textColorLink="@color/purple_700"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/section_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/nav_drawer_lexica_title"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/link_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:autoLink="web"
        android:fontFamily="sans-serif"
        android:text="@string/nav_drawer_lexica_url"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/section_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/nav_drawer_personal_title"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/link_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autoLink="web"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/nav_drawer_personal_url"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp" />

    <View
        android:id="@+id/nav_drawer_spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <include layout="@layout/item_drawer_footer" />

</LinearLayout>